Fixed splash screen flickering. Made put views in charge of letting the app know when they're ready to display.

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -29,6 +29,9 @@ div#splashscreen {
 div#splashscreen img {
     max-height: 25%;
     object-fit: contain;
+
+    /* Don't remove this! https://stackoverflow.com/questions/17932018/animate-opacity-in-jquery-leaves-ghost-elements */
+    -webkit-backface-visibility: hidden;
 }
 
 div#electron-titlebar {
